// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-row Renders \`alarms-list-row\` with custom props 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="pr-0"
  >
    <div
      class="layout row align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <v-checkbox-functional-stub
          class="ma-0"
          hidedetails="true"
          inputvalue="true"
          label=""
        />
      </div>
      <!---->
      <alarms-expand-panel-btn-stub
        alarm="[object Object]"
        istourenabled="true"
        search=""
        widget="[object Object]"
      />
    </div>
  </td>
  <td>
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag="tag"
      widget="[object Object]"
    />
  </td>
  <td>
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag="tag"
      widget="[object Object]"
    />
  </td>
  <td>
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with default and required props 1`] = `
<tr
  class="alarm-list-row"
>
  <!---->
  <td>
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag=""
      widget="[object Object]"
    />
  </td>
  <td>
    <alarm-column-value-stub
      alarm="[object Object]"
      column="[object Object]"
      selectedtag=""
      widget="[object Object]"
    />
  </td>
  <td>
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with expand button 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="pr-0"
  >
    <div
      class="layout row align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <!---->
      </div>
      <!---->
      <alarms-expand-panel-btn-stub
        alarm="[object Object]"
        search=""
        widget="[object Object]"
      />
    </div>
  </td>
  <td>
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with feature classes 1`] = `
<tr
  class="alarm-list-row class-2"
>
  <!---->
  <td>
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with filtered children in parent alarm 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="pr-0"
  >
    <div
      class="layout row align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <!---->
      </div>
      <div
        class="layout align-center justify-center"
      >
        <alarms-list-row-icon-stub
          alarm="[object Object]"
        />
      </div>
      <!---->
    </div>
  </td>
  <td>
    <actions-panel-stub
      item="[object Object]"
      parentalarm="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with instructions 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="pr-0"
  >
    <div
      class="layout row align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <!---->
      </div>
      <div
        class="layout align-center justify-center"
      >
        <alarms-list-row-icon-stub
          alarm="[object Object]"
        />
      </div>
      <!---->
    </div>
  </td>
  <td>
    <actions-panel-stub
      item="[object Object]"
      parentalarm="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
  </td>
</tr>
`;

exports[`alarms-list-row Renders \`alarms-list-row\` with resolved alarm 1`] = `
<tr
  class="alarm-list-row"
>
  <td
    class="pr-0"
  >
    <div
      class="layout row align-center justify-space-between"
    >
      <div
        class="layout alarm-list-row__checkbox"
      >
        <v-checkbox-functional-stub
          disabled="true"
          hidedetails="true"
          label=""
        />
      </div>
      <!---->
      <!---->
    </div>
  </td>
  <td>
    <actions-panel-stub
      item="[object Object]"
      refreshalarmslist="[Function]"
      widget="[object Object]"
    />
  </td>
</tr>
`;
